# data-analysis

./: .gitignore  README.md  _publish.yml  _quarto.yml  about.qmd  analysis.qmd  custom.scss  demo.qmd  index.qmd  pyproject.toml
.quarto/idx/: about.qmd.json  analysis.qmd.json  demo.qmd.json  index.qmd.json
.quarto/listing/: listing-cache.json
.quarto/project-cache/: deno-kv-file
.quarto/xref/: 063a0107  097152fa  400dd4c5  794acaea  8f88ed4c  INDEX  a5dbba66  b548c126  cf6a08bc  f3a2287f
_site/: about.html  about.qmd  analysis.html  demo.html  index.html  listings.json  robots.txt  search.json  sitemap.xml
_site/demo/basic_baysian_models/: beisyan_modeling.html
_site/demo/basic_factor_analyze/: factor_analyze_demo.html
_site/exe_data_analysis/steam-analysis/: steam_data_extraction.html
demo/basic_statistic_methods/basic_baysian_models/: beisyan_modeling.docx  beisyan_modeling.ipynb
demo/basic_statistic_methods/basic_factor_analyze/: factor_analyze_demo.ipynb
demo/improve_python/: demo_batch.ipynb  demo_tstring.ipynb
docs/: demo.html  index.html  listings.json  search.json
docs/demo/improve_python/: demo_batch.html
docs/site_libs/bootstrap/: bootstrap-7087db68dd177a7736e396e9869a251b.min.css
docs/work/improve_python/: advanced_pandas.html  demo_batch.html  demo_tstring.html
exe_data_analysis/steam-analysis/: steam_data_extraction.ipynb
study_statistics/: マクローリン展開.html  離散分布.html
work/improve_python/: advanced_pandas.ipynb  demo_batch.ipynb  demo_tstring.ipynb
work/improve_python/data/: advanced_pandas_summary.md  orders.md  survey.md  (+2 more)
(+26 files in other folders)
